# coding-agent

./: .gitignore  BENCHMARK_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROTOCOL.md  README.md  TEST_REPORT.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: agent_test.py  benchmark.py  polyglot.py  run_multi.py
coding_agent/: __init__.py  main.py  protocol.py
coding_agent/context/: __init__.py  manager.py  project_context.py
coding_agent/core/: __init__.py  agent.py  agent_handoff.py  agent_profiles.py  anthropic_protocol.py  commands.py  config.py  doctor.py  edit_journal.py  formatter.py  hooks_config.py  jobs.py  model_client.py  permissions.py  pricing.py  session_queue.py  session_status.py  session_title.py  setup_wizard.py  skills.py  state.py  text_replace.py  tokens.py  trust.py  updater.py
coding_agent/memory/: __init__.py  project.py  session.py
coding_agent/tools/: __init__.py  agent_ops.py  ask_ops.py  base.py  browser_ops.py  file_ops.py  git_ops.py  job_ops.py  lsp_ops.py  mcp_client.py  memory_ops.py  patch_ops.py  plan_ops.py  registry.py  sandbox.py  shell.py  skill_ops.py  tdd_ops.py  web_ops.py
coding_agent/ui/: __init__.py  app.py  tui.py
docs/: FEATURE_COMPARISON.md
tests/: test_agent.py  test_agent_handoff.py  test_agent_loop_e2e.py  test_agent_profile_wiring.py  test_agent_profiles.py  test_anthropic_protocol.py  test_ask_user.py  test_at_file_expansion.py  test_benchmark_wiring.py  test_browser.py  test_cli_args.py  test_command_policy.py  test_commands.py  test_compaction.py  test_config_maturity.py  test_config_resolve.py  test_context_dedup.py  test_context_stale_reads.py  test_doctor.py  test_edit_diff.py  test_edit_journal.py  test_external_dir_guard.py  test_failure_detection.py  test_file_ops_hardening.py  test_formatter.py  test_fuzzy_edit.py  test_git_branch.py  test_grep_ripgrep.py  test_hooks.py  test_install_config_parity.py  test_job_tools.py  test_jobs.py  test_lsp.py  test_lsp_didchange.py  test_main_entry.py  test_mcp.py  test_mcp_http.py  test_memory.py  test_memory_autorecall.py  test_memory_scope.py  (+47 more)
tests/fixtures/: mock_mcp_server.py
tui/: Cargo.toml
tui/src/: app.rs  backend.rs  composer.rs  file_index.rs  main.rs  proto.rs  render.rs  setup.rs
