[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent"
version = "0.2.0"
description = "AI coding assistant inspired by Claude Code architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
tokenizer = [
    "tiktoken>=0.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
coding-agent = "coding_agent.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["coding_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["coding_agent"]
omit = [
    "*/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
# 覆盖率地板：低于此值 `make cov` / CI 失败，防止新代码不写测试导致回退。
# 当前实测 ~77%；留 2 个点缓冲。抬升后可同步上调这个数。
fail_under = 75
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
