[package]
name = "coding-agent-tui"
version = "0.1.0"
edition = "2021"
description = "Full-screen Ratatui front-end for coding-agent (drives the Python core over the stdin/stdout JSON protocol)"

[[bin]]
name = "coding-agent-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["bracketed-paste", "event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "sync", "time"] }
futures = "0.3"
